fixed order and overflow

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,8 @@ nav a {
     width: 400px;
     background: #fff;
     border-radius: 10px;
+    height: 650px;
+    overflow-y: auto;
     padding: 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     font-size: 18px;
